Updated excluded area graph

--- a/area_calculations.Rmd
+++ b/area_calculations.Rmd
@@ -18,10 +18,10 @@ library(tidyverse)
 
 ```{r}
 # Create vector with layer names
-layer_name <- c("Depth", "Min SST", "Max SST", "Distance to Shore", "MPAs", "Artificial Reefs", "Reefs", "Wetlands", "No-take zones")
+layer_name <- c("Depth", "Distance to Shore", "MPAs", "Artificial Reefs", "Reefs", "Wetlands", "No-take zones")
 
 # Create vector with number of 0 cells in raster
-freq_0 <- c(freq(depth_binary, value = 0), freq(sst_binary_min, value = 0), freq(sst_binary_max, value = 0), freq(dist_shore_binary, value = 0), freq(mpas_binary, value = 0), freq(reefs_artificial_binary, value = 0), freq(reefs_binary, value = 0), freq(wetlands_binary, value = 0), freq(no_take_binary, value = 0))
+freq_0 <- c(freq(depth_binary, value = 0), freq(dist_shore_binary, value = 0), freq(mpas_binary, value = 0), freq(reefs_artificial_binary, value = 0), freq(reefs_binary, value = 0), freq(wetlands_binary, value = 0), freq(no_take_binary, value = 0))
 
 # Create df with layer names, frequency of 0 cells, and percentage of excluded area
 area_df <- data.frame(layer_name, freq_0) %>% 
@@ -38,7 +38,7 @@ area_col <- ggplot(area_df, aes(x = layer_name, y = percent_excluded)) +
   scale_y_continuous( expand = c(0,0)) +
   theme_classic(14) +
   geom_text(
-    aes(label = percent_excluded, y = percent_excluded + 10), 
+    aes(label = paste0(percent_excluded,"%"), y = percent_excluded + 15), 
     color = "black", 
     size = 5,
     hjust = 1
